force-app-modified/main/default/objects/Portal_Setting__mdt/fields/MAX_LOGIN_ATTEMPTS__c.field-meta.xml
<CustomField>
    <fullName>MAX_LOGIN_ATTEMPTS__c</fullName>
    <description>Number presents the maximum attempts to login that allowed.</description>
    <label>MAX LOGIN ATTEMPTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>