force-app-modified/main/default/objects/Portal_Setting__mdt/fields/MAX_VERIFICATION_CODE_ATTEMPTS__c.field-meta.xml
<CustomField>
    <fullName>MAX_VERIFICATION_CODE_ATTEMPTS__c</fullName>
    <description>The maximum sendings of verification code</description>
    <label>MAX VERIFICATION CODE ATTEMPTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>