force-app-modified/main/default/objects/Portal_Setting__mdt/fields/MINUTES_TO_RESET_ATTEMPTS__c.field-meta.xml
<CustomField>
    <fullName>MINUTES_TO_RESET_ATTEMPTS__c</fullName>
    <description>Represents how many minutes after the customer has reached the maximum number of attempts- his attempts will reset.</description>
    <label>MINUTES TO RESET ATTEMPTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>